# omni_bot2

./: CMakeLists.txt  README.md  package.xml
config/: aruco_tracker.yaml  board_descriptions.yaml  docking.yaml  front_cam_params.yaml  joy.yaml  localization.yaml  nav2_mppi.yaml  nav2_params.yaml  nav2_params_new.yaml  nav2_star.yaml  rear_cam_params .yaml  rgbd.yaml  slam.yaml  tags_36h11.yaml
launch/: april_launch.py  aruco_tracker.launch.xml  docking.py  docking_launch.py  ekf.launch.py  front_cam.launch.py  front_cam.launch.xml  joy_teleop.launch.py  localization_launch.py  navigation_launch.py  oakCam_launch.py  rear_cam.launch.xml  rear_cam_launch.py  robot_launch.py  rplidar.launch.py  rs_launch.py  rsp_launch.py  slam_launch.py
maps/: 01_01_25_map.pgm  01_01_25_map.yaml  dec27.pgm  dec27.yaml  map_aug_11.pgm  map_aug_11.yaml  map_aug_11_s.data  map_omni_3_10.pgm  map_omni_3_10.yaml  map_omni_5_10.pgm  map_omni_5_10.yaml  map_omni_9_6.pgm  map_omni_9_6.yaml
mesh/: 019.stl  Chest_Back1.stl  Chest_Front1.stl  ant_part1.stl  bd_head.stl  neck_2.stl  neck_base.stl  torso_base.stl
scripts/: acc_controller.py  arm_driver.py  cont_2.py  controller.py  dock_pose_pub.py  docking_controller.py  docking_node.py  imu.py  kalman_filter.py  move_robot.py  new_controller.py  odom.py  odom_50hz.py  odom_v2.py  old_controller.py  pub_det_pose.py  robot_guiC.py  steering_controller.py  teensy_imu.py  torso_joint.py  vel_control.py  voice_serv.py
urdf/: base.xacro  dual_arm_robot.urdf.xacro  hardware.xacro  head.xacro  macros.xacro  mantis_gripper.xacro  robbie.urdf.xacro  (+3 more)
(+12 files in other folders)
